2009-09-29  Andy Buckley  <andy@insectnation.org>

	* Adding optional use of args as regex match expressions with
	-l/--list-analyses.

2009-09-03  Andy Buckley  <andy.buckley@cern.ch>

	* Passing GSL include path to compiler, since its absence was
	breaking builds on systems with no GSL installation in a standard
	location (such as SLC5, for some mysterious reason!)

	* Removing lib extension passing to compiler from the configure
	script, because Macs and Linux now both use .so extensions for the
	plugin analysis modules.

2009-09-02  Andy Buckley  <andy@insectnation.org>

	* Adding analysis info file path search with RIVET_DATA_PATH
	variable (and using this to fix doc build.)

	* Improvements to AnalysisLoader path search.

	* Moving analysis sources back into single directory, after a
	proletarian uprising ;)

2009-09-01  Andy Buckley  <andy@insectnation.org>

	* Adding WFinder and WAnalysis, based on Z proj and analysis, with
	some tidying of the Z code.

	* ClusteredPhotons now uses an IdentifiedFS to pick the photons to
	be looped over, and only clusters photons around *charged* signal
	particles.

2009-08-31  Andy Buckley  <andy@insectnation.org>

	* Splitting analyses by directory, to make it easier to disable
	building of particular analysis group plugin libs.

	* Removing/merging headers for all analyses except for the special
	MC_JetAnalysis base class.

	* Exit with an error message if addProjection is used twice from
	the same parent with distinct projections.

2009-08-28  Andy Buckley  <andy@insectnation.org>

	* Changed naming convention for analysis plugin libraries, since
	the loader has changed so much: they must now *start* with the
	word "Rivet" (i.e. no lib prefix).

	* Split standard plugin analyses into several plugin libraries:
	these will eventually move into separate subdirs for extra build
	convenience.

	* Started merging analysis headers into the source files, now that
	we can (the plugin hooks previously forbade this).
